css/styles.css
/**** MAIN STYLES ****/
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&Roboto:300');
@import url('https://fonts.googleapis.com/css?family=Calistoga&display=swap');

/**** VARIABLES ****/
:root {
  --color-primary: #1FD2DE;
  --color-accent: #628FB0;
  --color-win: #78CF82;
  --color-lose: #DE2B1F;
  --color-start: #1D273D;
  --color-shadow: #706D6E;
  --color-light: #F9F9F8;
  --color-light-dark: #E0E0DF;
  --color-keys: #37474F;
  --font-size-large: 60px;
  --font-size-medium: 28px;
  --font-size-small: 18px;
  --heading-font-size-small: 32px;
  --transition: all .2s ease-in-out;
}

/**** KEYFRAMES ****/
@keyframes matched {
  0% {
    transform: scale(0.8);
  }
  20% {
    transform: scale(1.3) rotate(20deg);
  }
  40% {
    transform: scale(1.3) rotate(-20deg);
  }
  60% {
    transform: rotate(20deg);
  }
  80% {
    transform: rotate(0deg);
  }
  100% {
    transform: scale(1);
  }
}

@keyframes win-pulse {
  0% {
    transform: scale(0.5);
  }
  25% {
    transform: scale(1.3);
  }
  50% {
    transform: scale(0.8);
  }
  75% {
    transform: scale(1.3);
  }
  100% {
    transform: scale(1);
  }
}

/* MAIN */
* {
  box-sizing: border-box;
}

body {
  justify-content: space-evenly;
  flex-direction: column;
  display: flex;
  height: 100vh;
  background: var(--color-start);
  overflow: hidden;
}

li, ol {
  padding: 0;
  display: inline-block;
}

button {
  margin: 5px;
  border: 1px solid transparent;
  width: 35px;
  height: 35px;
  color: var(--color-keys);
  font-size: var(--font-size-small);
  background-color: var(--color-light);
  border-radius: 5px;
  transition: var(--transition);
}

.main-container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 100%;
  max-height: 900px;
  text-align: center;
}

.section {
  width: 100%;
  padding: 10px;
}

/**** TITLE ****/
.title,
.header {
  color: var(--color-primary);
  text-transform: uppercase;
  font-family: 'Open Sans', sans-serif;
  font-size: var(--heading-font-size-small);
  margin: 0;
}

/**** PHRASE ****/
.letter {
  font-size: var(--font-size-small);
  font-family: 'Calistoga', cursive;
  text-transform: uppercase;
  align-items: center;
  display: flex;
  justify-content: center;
  height: 35px;
  width: 35px;
  margin-right: 3px;
  margin-bottom: 15px;
  color: transparent;
  background: var(--color-light);
  border-radius: 10px;
}

.phrase {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.word {
  display: flex;
  flex-flow: row nowrap;
  margin: 0.25rem 1rem;
}

.show {
  color: var(--color-start);
  background-color: var(--color-primary);
  box-shadow: 3px 3px var(--color-shadow);
  animation-duration: .5s;
  animation-name: matched;
}

.win-pulse {
  animation-duration: 1s;
  animation-name: win-pulse;
}

/**** KEYBOARD ****/
.keyrow {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.chosen {
  background: var(--color-accent);
  border-radius: 5px;
  font-size: var(--font-size-small);
  color: var(--color-light);
  box-shadow: 3px 3px var(--color-shadow);
}

/* PLAY AGAIN/TRY AGAIN BUTTON */
.btn__reset {
  padding: 8px;
  margin: 50px auto;
  background: var(--color-light);
  border-radius: 5px;
  font-size: var(--font-size-small);
  font-family: 'Raleway', sans-serif;
  font-weight: 500;
  cursor: pointer;
  box-shadow: 4px 4px var(--color-shadow);
}

.btn__reset:active {
  background: var(--color-light-dark);
  box-shadow: 2px 2px var(--color-shadow);
}



/**** OVERLAY ****/

#overlay {
  display: flex;
  flex-direction: column;
  position: fixed;
  color: var(--color-light);
  justify-content: center;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 5px;
}



.start {
  background-color: var(--color-start);
}

.start a {
  color: var(--color-primary);
}

.win {
  background-color: var(--color-win);
}

.win a {
  color: var(--color-win);
}

.lose {
  background-color: var(--color-lose);
}

.lose a {
  color: var(--color-lose);
}


@media (min-width: 768px) {
  h2 {
    font-size: var(--font-size-large);
  }

  .phrase {
    flex-flow: row wrap;
  }

  .word {
    margin: 1rem;
  }

  .letter {
    height: 50px;
    width: 50px;
    margin-right: 8px;
    font-size: var(--font-size-medium);
  }

  button {
    height: 50px;
    width: 50px;
    font-size: var(--font-size-medium);
    margin: 6px;
  }

  .chosen {
    font-size: var(--font-size-medium);
  }

  .btn__reset {
    font-size: var(--font-size-medium);
  }
}


@media (min-width: 1024px) {
  body {
    overflow: hidden;
  }

  .title {
    font-size: var(--font-size-large);
  }

  .letter {
    height: 70px;
    width: 70px;
  }
}

